<resources>
    <string name="app_name">BuyFishOnline</string>

    //OnStartActivity strings
    <string name="OnStartHeading">Choose Your Fate</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignInHeader">Enter Credentials Below</string>


    //LandingActivity strings
    <string name="BrowseFish">Browse Fish</string>
    <string name="ViewCart">View Cart</string>
    <string name="Admin">Admin Options</string>
    <string name="Logout">Logout</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    //LoginActivity strings
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="create_new_account_below">Create new account below.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logoutButton">Item1</string>
    <string name="landing_heading">Welcome User</string>
    <string name="adminSettingsHeading">Admin Settings</string>
    <string name="removeUserButton">Remove User</string>
    <string name="addUserButton">Add User</string>
    <string name="CartHeading">Your Fish Bag</string>
    <string name="browseHeading">Welcome To The Fish Market</string>
    <string name="cartView">Cart</string>
    <string name="fishMarketEditText">Current Fish</string>
    <string name="fishNameEditText">Enter fish name</string>
    <string name="addToCartButton">Add To Cart</string>
    <string name="removeFishButton">Remove Fish</string>
    <string name="AddFishButton">Add Fish</string>
    <string name="enter_fish">Enter Fish</string>
    <string name="enter_price">Enter Price</string>
    <string name="check_out">Check Out</string>


</resources>