<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral_variant20"
    tools:context=".OnStartActivity"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/OnStartHeading"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="225dp"
        android:layout_height="80dp"
        android:layout_marginTop="344dp"
        android:text="@string/SignIn"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="225dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/SignUp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
</androidx.constraintlayout.widget.ConstraintLayout>